Fix the padding extra padding in the body

--- a/style.css
+++ b/style.css
@@ -9,15 +9,15 @@
 body {
     font-size: 18px;
     background-color: dimgray;
+    background: url(images/Phone\ wallper.jpg);
+    background: url(images/Phone\ wallper.jpg);
 }
 
 .app {
     width: 95%;
-    max-width: 420px;
     margin : 2rem auto;
     padding: 2rem;
     min-height: 100vh;
-    background: url(images/Phone\ wallper.jpg);
     background-size: cover;
     font-family: 'Pacifico';
     display: flex;
